<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TKambioActivity">

    <TextView
        android:id="@+id/etTituloCambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:text="@string/titulo_Cambio"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etIngreseTipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/etIngreseTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="173dp"
        android:text="@string/titulo_ingreseTipo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/etIngreseMonto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etIngreseTipo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTipoCambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_tipo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMontoDolares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplomonto" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="139dp"
        android:text="@string/boton_Calcular"
        app:layout_constraintBottom_toTopOf="@+id/etBillete50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etIngreseMonto" />

    <TextView
        android:id="@+id/etResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="28dp"
        android:text="@string/titulo_resultado"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <TextView
        android:id="@+id/etBilletes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Titulo_billetes"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etResultado"
        app:layout_constraintTop_toBottomOf="@+id/etResultado" />

    <TextView
        android:id="@+id/etTitulloB100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/titulo_billete100"
        app:layout_constraintBaseline_toBaselineOf="@+id/etBillete100"
        app:layout_constraintStart_toEndOf="@+id/etBillete100" />

    <TextView
        android:id="@+id/etTituloB50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="15dp"
        android:text="@string/titulo_billete50"
        app:layout_constraintBottom_toTopOf="@+id/etTituloB20"
        app:layout_constraintStart_toEndOf="@+id/etBillete50" />

    <TextView
        android:id="@+id/etTituloB20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/titulo_billetes20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etBillete20" />

    <TextView
        android:id="@+id/etIngreseMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="22dp"
        android:text="@string/titulo_ingreseMonto"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/etMontoSoles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/etBilletes"
        app:layout_constraintStart_toEndOf="@+id/etResultado" />

    <TextView
        android:id="@+id/etBillete100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/etBillete50"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/etBillete50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/etTituloB50"
        app:layout_constraintStart_toStartOf="@+id/etBillete100" />

    <TextView
        android:id="@+id/etBillete20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/etTituloB20"
        app:layout_constraintStart_toStartOf="@+id/etBillete50" />
</androidx.constraintlayout.widget.ConstraintLayout>