<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/etTituloMultiApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="51dp"
        android:text="@string/titulo_multiapp"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTkambio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTkambio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:text="@string/boton_tkambio"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEdad"
        app:layout_constraintEnd_toEndOf="@+id/btnEdad"
        app:layout_constraintStart_toStartOf="@+id/btnContactos"
        app:layout_constraintTop_toBottomOf="@+id/etTituloMultiApp" />

    <Button
        android:id="@+id/btnEdad"
        android:layout_width="236dp"
        android:layout_height="0dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="19dp"
        android:text="@string/boton_edad"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnContactos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTkambio" />

    <Button
        android:id="@+id/btnContactos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="306dp"
        android:text="@string/boton_Contactos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnEdad"
        app:layout_constraintStart_toStartOf="@+id/btnEdad"
        app:layout_constraintTop_toBottomOf="@+id/btnEdad" />
</androidx.constraintlayout.widget.ConstraintLayout>